--- a/src/main/java/ventanas/Form.form
+++ b/src/main/java/ventanas/Form.form
@@ -201,7 +201,7 @@
                               <Component id="jpnDatos1" min="-2" max="-2" attributes="0"/>
                               <EmptySpace type="unrelated" max="-2" attributes="0"/>
                               <Component id="jpnDatos2" min="-2" max="-2" attributes="0"/>
-                              <EmptySpace max="32767" attributes="0"/>
+                              <EmptySpace pref="8" max="32767" attributes="0"/>
                           </Group>
                       </Group>
                     </DimensionLayout>
@@ -451,6 +451,10 @@
                           </Properties>
                         </Component>
                         <Component class="javax.swing.JTextField" name="txtNumeroDocumento">
+                          <Events>
+                            <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="txtNumeroDocumentoKeyPressed"/>
+                            <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="txtNumeroDocumentoKeyTyped"/>
+                          </Events>
                         </Component>
                         <Component class="javax.swing.JTextField" name="txtTelefono">
                         </Component>
@@ -1308,9 +1312,6 @@
                             <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                               <Color blue="99" green="ff" red="99" type="rgb"/>
                             </Property>
-                            <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                              <Image iconType="2" name="C:\Users\Pietro\Desktop\JOSE TAREAS APUNTES\Semestre 5\3. TAREAS - SEMINARIO DE COMPLEMENTACI&#xd3;N PR&#xc1;CTICA II\Tareas\TAREA T13\T13-Empleados\src\main\java\ventanas\Imagenes\save.png"/>
-                            </Property>
                             <Property name="text" type="java.lang.String" value="Guardar"/>
                             <Property name="toolTipText" type="java.lang.String" value=""/>
                             <Property name="horizontalTextPosition" type="int" value="4"/>
@@ -1323,9 +1324,6 @@
                           <Properties>
                             <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                               <Color blue="66" green="cc" red="ff" type="rgb"/>
-                            </Property>
-                            <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                              <Image iconType="2" name="C:\Users\Pietro\Desktop\JOSE TAREAS APUNTES\Semestre 5\3. TAREAS - SEMINARIO DE COMPLEMENTACI&#xd3;N PR&#xc1;CTICA II\Tareas\TAREA T13\T13-Empleados\src\main\java\ventanas\Imagenes\Edit.png"/>
                             </Property>
                             <Property name="text" type="java.lang.String" value="Editar"/>
                             <Property name="toolTipText" type="java.lang.String" value=""/>
@@ -1340,9 +1338,6 @@
                             <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                               <Color blue="66" green="66" red="ff" type="rgb"/>
                             </Property>
-                            <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                              <Image iconType="2" name="C:\Users\Pietro\Desktop\JOSE TAREAS APUNTES\Semestre 5\3. TAREAS - SEMINARIO DE COMPLEMENTACI&#xd3;N PR&#xc1;CTICA II\Tareas\TAREA T13\T13-Empleados\src\main\java\ventanas\Imagenes\eliminar.png"/>
-                            </Property>
                             <Property name="text" type="java.lang.String" value="Eliminar"/>
                             <Property name="toolTipText" type="java.lang.String" value=""/>
                             <Property name="horizontalTextPosition" type="int" value="4"/>
@@ -1356,9 +1351,6 @@
                             <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                               <Color blue="ff" green="cc" red="99" type="rgb"/>
                             </Property>
-                            <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                              <Image iconType="2" name="C:\Users\Pietro\Desktop\JOSE TAREAS APUNTES\Semestre 5\3. TAREAS - SEMINARIO DE COMPLEMENTACI&#xd3;N PR&#xc1;CTICA II\Tareas\TAREA T13\T13-Empleados\src\main\java\ventanas\Imagenes\cancel.png"/>
-                            </Property>
                             <Property name="text" type="java.lang.String" value="Cancelar"/>
                             <Property name="toolTipText" type="java.lang.String" value=""/>
                             <Property name="horizontalTextPosition" type="int" value="4"/>
@@ -1371,9 +1363,6 @@
                           <Properties>
                             <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                               <Color blue="ff" green="ff" red="ff" type="rgb"/>
-                            </Property>
-                            <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                              <Image iconType="2" name="C:\Users\Pietro\Desktop\JOSE TAREAS APUNTES\Semestre 5\3. TAREAS - SEMINARIO DE COMPLEMENTACI&#xd3;N PR&#xc1;CTICA II\Tareas\TAREA T13\T13-Empleados\src\main\java\ventanas\Imagenes\basket.png"/>
                             </Property>
                             <Property name="text" type="java.lang.String" value="Limpiar"/>
                             <Property name="toolTipText" type="java.lang.String" value=""/>
